--- a/index.html
+++ b/index.html
@@ -37,89 +37,44 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                  <section>
+                  <section id="news_section">
                     <header class="major">
                       <h2>News</h2>
                     </header>
                     <div class="row">
 
-                      <div class="col-12 col-12-medium col-12-small">
+                      <div v-for="n in news" class="col-12 col-12-medium col-12-small">
                         <section class="box">
                           <header>
-                            <h3>Oddaja "Dobro Jutro" v Kostelu</h3>
-                            <p>14 Marec 2018</p>
+                            <h3>{{n.title}}</h3>
+                            <p>{{ n.date }}</p>
                           </header>
-                          <p>Tudi v POŠ Osilnica smo se pridružili očiščevalni akciji. V četrtek, 30. marca 2017 smo očistili okolico šole in sprehajalno pot, ki vodi do reke Kolpe. Ugotovili smo, da je okolica šole zelo čista, saj nismo našli skoraj nobene smeti. Po poti do reke Kolpe, predvsem pa v bližini vode, pa smo hitro napolnili svojo vrečko. Našli smo največ pločevink in druge odpadne embalaže.
-                          </p>
+                          <p>{{ n.content }}</p>
+                          <p>{{ n.author }}</p>
+
+                          <img class="news_img" v-for="i in n.images" :src="'images/' + i"  />
+
+                          <footer>
+
+                          </footer>
+                        </section>
+                      </div>
+
+
+                      <div v-if="more_news" class="col-12 col-12-medium col-12-small">
+                        <section >
+
                           <footer>
                             <ul class="actions">
-                              <li><a href="#" class="button alt">Več</a></li>
+                              <li><a @click="show_more" class="button alt">Več</a></li>
                             </ul>
                           </footer>
                         </section>
                       </div>
-                      <div class="col-12 col-12-medium col-12-small">
-                        <section class="box">
-                          <!-- <a href="#" class="image featured"><img src="images/cistina_akcija_Osilnica/01.jpg" alt="" /></a> -->
-                          <header>
-                            <h3>OBVESTILO - STAVKA</h3>
-                            <p>13 Februar 2018</p>
-                          </header>
-                          <p>Spoštovani straši, Sporočamo vam, da bodo v  sredo, 14.2.2018 na OŠ Fara, POŠ Osilnica in v vrtcu Fara pouk in druge vzgojno-izobraževalne aktivnosti potekale povsem normalno.
-                              Učitelji podpirajo stavkovne zahteve SVIZ-a, vendar zaradi nevšečnosti staršem, predvsem pa za dobrobit učenk in učencev naše šole, ter  otrok iz vrtca Fare, ne bodo stavkali.
-                              Ta dan, bo vzgojno – izobraževalni proces v šoli in vrtcu potekal po načrtovanem urniku.
 
-                              Martin Marinč, ravnatelj
-                          </p>
-                          <footer>
-                            <ul class="actions">
-                              <li><a href="#" class="button alt">Več</a></li>
-                            </ul>
-                          </footer>
-                        </section>
-                      </div>
-                      <div class="col-12 col-12-medium col-12-small">
-                        <section class="box">
-                          <!-- <a href="#" class="image featured"><img src="images/cistina_akcija_Osilnica/01.jpg" alt="" /></a> -->
-                          <header>
-                            <h3>OB PREŠERNOVEM DNEVU</h3>
-                            <p>13 Februar 2018</p>
-                          </header>
-                          <p>
-
-                            V torek, 6. februarja so učenci naše šole sodelovali v kulturnem programu, posvečenemu slovenskemu kulturnemu prazniku, ki ga je organiziral Zavod za kulturo in turizem Kostel. Učenci so recitirali pesmi Toneta Pavčka, Franceta Prešerna in Barbare Gregorič Gorenc, učenki Kaja Bizjak Lisac in Lucija Štefančič pa sta prebrali svoji pesmi o gradu Kostel, ki sta nastali v okviru projektov Grad Kostel in Moja rodna domovina. V glasbenem delu programa sta nastopila učenca Dino Štimac in Erik Bauer  s skladbama na harmoniki, malčki iz vrtca Fara pa so nam pokazali, kako so nekoč plesali grajske plese. Izvirne grajske noše je malčkom sešila gospa Anita Šakič.
-
-                            Kulturnega večera, ki je potekal v galeriji stavbe Stara šola TRIS, se je udeležilo lepo število domačinov.
-
-                            Geraldine Frbežar
-
-                          </p>
-                          <footer>
-                            <ul class="actions">
-                              <li><a href="#" class="button alt">Več</a></li>
-                            </ul>
-                          </footer>
-                        </section>
-                      </div>
-                      <div class="col-12 col-12-medium col-12-small">
-                        <section class="box">
-                          <!-- <a href="#" class="image featured"><img src="images/cistina_akcija_Osilnica/01.jpg" alt="" /></a> -->
-                          <header>
-                            <h3>Čistil tudi v osilnici</h3>
-                            <p>18 April 2017</p>
-                          </header>
-                          <p>Tudi v POŠ Osilnica smo se pridružili očiščevalni akciji. V četrtek, 30. marca 2017 smo očistili okolico šole in sprehajalno pot, ki vodi do reke Kolpe. Ugotovili smo, da je okolica šole zelo čista, saj nismo našli skoraj nobene smeti. Po poti do reke Kolpe, predvsem pa v bližini vode, pa smo hitro napolnili svojo vrečko. Našli smo največ pločevink in druge odpadne embalaže.
-                          </p>
-                          <footer>
-                            <ul class="actions">
-                              <li><a href="#" class="button alt">Več</a></li>
-                            </ul>
-                          </footer>
-                        </section>
-                      </div>
                     </div>
-                  </section>
 
+                  </section>
               </div>
             </div>
           </div>
