--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -33,15 +33,15 @@
 									<h2>Zaposleni</h2>
 								</header>
                 <p>
-                  Uroš Obranovič
-                  Elektronska pošta: uros.obranovic@gmail.com
-                  Govorilne ure za učence: Vsak torek 5. šolsko uro
+                  Uroš Obranovič<br>
+                  Elektronska pošta: uros.obranovic@gmail.com<br>
+                  Govorilne ure za učence: Vsak torek 5. šolsko uro<br>
                   Predmeti: Fizika, Glasbena umetnost.
                 </p>
                 <p>
-                Alan Furlani
-                Elektronska pošta: alan.furlani@gmail.com
-                Govorilne ure za učence:
+                Alan Furlani<br>
+                Elektronska pošta: alan.furlani@gmail.com<br>
+                Govorilne ure za učence:   <br>
                 Predmeti: Športna vzgoja,
                 </p>
 							</article>
