--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -33,7 +33,7 @@
 									<h2>Zaposleni</h2>
 								</header>
                 <p>
-                  Uroš Obranovič<br>
+                  <strong>Uroš Obranovič</strong><br>
                   Elektronska pošta: uros.obranovic@gmail.com<br>
                   Govorilne ure za učence: Vsak torek 5. šolsko uro<br>
                   Predmeti: Fizika, Glasbena umetnost.
