--- a/Osnovni_podatki.html
+++ b/Osnovni_podatki.html
@@ -36,6 +36,8 @@
                 <p>Osnovna šola Fara</p>
                 <p>Fara 3</p>
                 <p>1336 Kostel</p>
+		<p>Davčna številka: 56815905</p>
+	 	<p>Telefonska številka: 01-8942-160</p>
 							</article>
 
 					</div>
