--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -44,6 +44,12 @@
                 Govorilne ure za učence:   <br>
                 Predmeti: Športna vzgoja,
                 </p>
+		<p>
+                  <strong>Mitja Letig</strong><br>
+                  Elektronska pošta:mletig@gmail.com<br>
+                  Govorilne ure za učence: <br>
+                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor.
+		</p>
 							</article>
 
 					</div>
