--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -39,10 +39,10 @@
                   Predmeti: Fizika, Glasbena umetnost.
                 </p>
                 <p>
-                Alan Furlani<br>
+                <strong>Alan Furlani</strong><br>
                 Elektronska pošta: alan.furlani@gmail.com<br>
-                Govorilne ure za učence:   <br>
-                Predmeti: Športna vzgoja,
+                Govorilne ure za učence:<br>
+                Predmeti: Športna vzgoja.
                 </p>
 		<p>
                   <strong>Mitja Letig</strong><br>
