--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -50,6 +50,18 @@
                   Govorilne ure za učence: <br>
                   Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor.
 		</p>
+		<p>
+                  <strong>Alenka Čop</strong><br>
+                  Elektronska pošta: alenka.cop@yahoo.com<br>
+                  Govorilne ure za učence: <br>
+                  Predmeti: ngleški jezik, individualna in skupinska pomoč.
+		</p>
+		<p>
+                  <strong>Darinka Remih</strong><br>
+                  Elektronska pošta: <br>
+                  Govorilne ure za učence: <br>
+                  Predmeti: Likovna umetnost, nemški jezik, podaljšano bivanje.
+		</p>
 							</article>
 
 					</div>
