--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -54,7 +54,7 @@
                   <strong>Alenka Čop</strong><br>
                   Elektronska pošta: alenka.cop@yahoo.com<br>
                   Govorilne ure za učence: <br>
-                  Predmeti: ngleški jezik, individualna in skupinska pomoč.
+                  Predmeti: Angleški jezik, individualna in skupinska pomoč.
 		</p>
 		<p>
                   <strong>Darinka Remih</strong><br>
