--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -62,6 +62,12 @@
                   Govorilne ure za učence: <br>
                   Predmeti: Likovna umetnost, nemški jezik, podaljšano bivanje.
 		</p>
+		<p>
+                  <strong>Mateja Oberstar</strong><br>
+                  Elektronska pošta: mateja Oberstar@gmail.com<br>
+                  Govorilne ure za učence: <br>
+                  Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja.
+		</p>
 							</article>
 
 					</div>
