--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <!-- Banner -->
             <section id="banner">
               <header>
-                <h2>Work in progress</h2>
+                <h2>Work in progress...</h2>
               </header>
             </section>
 
