--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
           <!-- Banner -->
             <section id="banner">
               <header>
-                <h2>Work in progress...</h2>
+               <h2>...še urejamo...</h2>
               </header>
+			 
             </section>
-
+			
         </section>
+		
 
       <!-- Main -->
         <section id="main">
