--- a/Kontakt.html
+++ b/Kontakt.html
@@ -34,8 +34,8 @@
 								</header>
                 <p>
                   
-					Martin Marinč, ravnatelj</strong><br><br>
-					Tel. št.: <strong>---/---</strong><br>
+					Martin Marinč, ravnatelj</strong><br>
+					Tel. št.: <strong>01-8942-160 (+386-1-8942-160)</strong><br>
 					E-pošta: <strong>os.fara@guest.arnes.si</strong><br> 
 
          
