--- a/PredmetnikiSrednjihSol.html
+++ b/PredmetnikiSrednjihSol.html
@@ -33,10 +33,10 @@
 									<h2>Predmetniki Srednjih šol</h2>
 								</header>
                 <p>
-					Predmetnike programov posameznih šol boste najlažje našli na matični strani teh srednji šol.<br>
-          PRIMER: za program 'Gimnazija' na GSŠ Kočevje je predmetnik dostopen na tej povezavi (https://www.gssk.si/index.php?option=com_content&view=article&id=81&Itemid=498). Predmetniki za druge programe so dostopni preko klika na zavihek 'PROGRAMI'. Nato si izberete želen program in poiščete povezavo do predmetnika.<br>
-					V kolikor bi imeli z iskanjem predmetov težave, se lahko vedno obrnete name. O tem je obveščen tudi razrednik, ki bo učence še dodatno obvestil, da sem na voljo za pomoč.<br>
-          <strong>Urška Baković</strong>
+	  Predmetnike programov posameznih šol boste najlažje našli na matični strani teh srednji šol.<br>
+          <strong>PRIMER</strong>: za program 'Gimnazija' na GSŠ Kočevje je predmetnik dostopen na tej povezavi:(https://www.gssk.si/index.php?option=com_content&view=article&id=81&Itemid=498).Predmetniki za druge programe so dostopni preko klika na zavihek 'PROGRAMI'. Nato si izberete želen program in poiščete povezavo do predmetnika.<br>
+	  V kolikor bi imeli z iskanjem predmetov težave, se lahko vedno obrnete name. O tem je obveščen tudi razrednik, ki bo učence še dodatno obvestil, da sem na voljo za pomoč.<br>
+          <strong>Urška Baković, svetovalna delavka</strong>
          
                 </p>
                
