--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -37,7 +37,7 @@
 					Šolska svetovalna delavka Urška Baković je v OŠ in vrtcu Fara zaposlena za skrajšan delovni čas. Tako je na delovnem mestu prisotna v <strong>ponedeljek</strong>, <strong>torek</strong>, <strong>sredo</strong> in <strong>četrtek</strong> od predvidoma <strong>8. do 14. ure.</strong><br><br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
-					E-pošta: <strong>urska.bakovic@gmail.com</strong><br> 
+					E-pošta: <strong>urska.bakovic@guest.arnes.si</strong><br> 
 
          
                 </p>
