--- a/PredmetnikiSrednjihSol.html
+++ b/PredmetnikiSrednjihSol.html
@@ -37,7 +37,7 @@
           <strong>PRIMER</strong>: za program 'Gimnazija' na GSŠ Kočevje je predmetnik dostopen na naslednjem naslovu:<br>
 	  <strong>https://www.gssk.si/index.php?option=com_content&view=article&id=81&Itemid=498.</strong><br>
 	  Predmetniki za druge programe so dostopni preko klika na zavihek 'PROGRAMI'. Nato si izberete želen program in poiščete povezavo do predmetnika.<br>
-	  V kolikor bi imeli z iskanjem predmetov težave, se lahko vedno obrnete name. O tem je obveščen tudi razrednik, ki bo učence še dodatno obvestil, da sem na voljo za pomoč.<br>
+	  V kolikor bi imeli z iskanjem predmetov težave, se lahko vedno obrnete name.<br>
           <strong>Urška Baković, svetovalna delavka</strong>
          
                 </p>
