--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <!-- Banner -->
             <section id="banner">
               <header>
-               <h2>...še urejamo...</h2>
+              <!-- <h2>...še urejamo...</h2> -->
               </header>
-			 
+			
             </section>
 			
         </section>
