--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -36,37 +36,43 @@
                   <strong>Uroš Obranovič</strong><br>
                   Elektronska pošta: uros.obranovic@gmail.com<br>
                   Govorilne ure za učence: Vsak torek 5. šolsko uro<br>
-                  Predmeti: Fizika, Glasbena umetnost.
+                  Predmeti: Fizika, Glasbena umetnost, izbirni predmet Urejanje besedil, podaljšano bivanje.
                 </p>
                 <p>
                 <strong>Alan Furlani</strong><br>
-                Elektronska pošta: alan.furlani@gmail.com<br>
+                Elektronska pošta: alan.furlani@guest.arnes.si<br>
                 Govorilne ure za učence:<br>
-                Predmeti: Športna vzgoja.
+                Predmeti: Športna vzgoja, izbirni predmet Šport za zdravje, podaljšano bivanje.
                 </p>
 		<p>
                   <strong>Mitja Letig</strong><br>
                   Elektronska pošta: mletig@gmail.com<br>
                   Govorilne ure za učence: <br>
-                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor.
+                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor, izbirni predmet Glasbena dela.
 		</p>
 		<p>
                   <strong>Alenka Čop</strong><br>
-                  Elektronska pošta: alenka.cop@yahoo.com<br>
+                  Elektronska pošta: alenka.cop@guest.arnes.si<br>
                   Govorilne ure za učence: <br>
-                  Predmeti: Angleški jezik, individualna in skupinska pomoč.
+                  Predmeti: Angleški jezik, individualna in skupinska pomoč, izbirni predmet Nemščina, dodatni in dopolnilni pouk.
 		</p>
 		<p>
-                  <strong>Darinka Remih</strong><br>
-                  Elektronska pošta: <br>
+                  <strong>Ajda Skrbinšek</strong><br>
+                  Elektronska pošta: <br>ajda.skrbinšek@guest.arnes.si
                   Govorilne ure za učence: <br>
-                  Predmeti: Likovna umetnost, nemški jezik, podaljšano bivanje.
+                  Predmeti: Likovna umetnost,podaljšano bivanje.
 		</p>
 		<p>
                   <strong>Mateja Oberstar</strong><br>
                   Elektronska pošta: mateja Oberstar@gmail.com<br>
                   Govorilne ure za učence: <br>
-                  Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja.
+                  Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja, podaljšano bivanje.
+		</p>
+		<p>
+                  <strong>Geraldine Frbežar</strong><br>
+                  Elektronska pošta: geraldine.frbežar@guest.arnes.si<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: Slovenščina 5., 6., 7., 8. in 9. razred, dramsko recitatorski krožek, knjižničarka.
 		</p>
 							</article>
 
