--- a/Osnovni_podatki.html
+++ b/Osnovni_podatki.html
@@ -33,11 +33,13 @@
 									<h2>Osnovni podatki</h2>
 									
 								</header>
-                <p>Osnovna šola Fara</p>
+                <p> <strong>Osnovna šola Fara</strong></p>
                 <p>Fara 3</p>
                 <p>1336 Kostel</p>
-		<p>Davčna številka: 56815905</p>
-	 	<p>Telefonska številka: 01-8942-160</p>
+				<p>Davčna številka: 56815905</p>
+				<p>Telefonska številka: 01-8942-160</p>
+				<p>Elektronski naslov: os.fara@guest.arnes.si</p
+				<p>Računovodski servis: Bobnar d.o.o., Karlovica 11, 1315 Velike Lašče</p>
 							</article>
 
 					</div>
