--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -74,6 +74,12 @@
                   Govorilne ure za učence: po dogovoru<br>
                   Predmeti: Slovenščina 5., 6., 7., 8. in 9. razred, dramsko recitatorski krožek, knjižničarka.
 		</p>
+		<p>
+                  <strong>Urška Baković</strong><br>
+                  Elektronska pošta: urska.baković@guest.arnes.si<br>
+                  Govorilne ure za učence: Po dogovoru<br>
+                  Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
+                </p>
 							</article>
 
 					</div>
