--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -58,25 +58,25 @@
 		</p>
 		<p>
                   <strong>Ajda Skrbinšek</strong><br>
-                  Elektronska pošta: <br>ajda.skrbinšek@guest.arnes.si
+                  Elektronska pošta: <br>ajda.skrbinsek@guest.arnes.si
                   Govorilne ure za učence: <br>
                   Predmeti: Likovna umetnost,podaljšano bivanje.
 		</p>
 		<p>
                   <strong>Mateja Oberstar</strong><br>
-                  Elektronska pošta: mateja Oberstar@gmail.com<br>
+                  Elektronska pošta: mateja.oberstar@gmail.com<br>
                   Govorilne ure za učence: <br>
                   Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja, podaljšano bivanje.
 		</p>
 		<p>
                   <strong>Geraldine Frbežar</strong><br>
-                  Elektronska pošta: geraldine.frbežar@guest.arnes.si<br>
+                  Elektronska pošta: geraldine.frbezar@guest.arnes.si<br>
                   Govorilne ure za učence: po dogovoru<br>
                   Predmeti: Slovenščina 5., 6., 7., 8. in 9. razred, dramsko recitatorski krožek, knjižničarka.
 		</p>
 		<p>
                   <strong>Urška Baković</strong><br>
-                  Elektronska pošta: urska.baković@guest.arnes.si<br>
+                  Elektronska pošta: urska.bakovic@guest.arnes.si<br>
                   Govorilne ure za učence: Po dogovoru<br>
                   Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
                 </p>
