Update and rename OrganiSole.html to SvetSole.html

--- a/SvetSole.html
+++ b/SvetSole.html
@@ -33,7 +33,7 @@
 									<h2>Organi šole</h2>
 									
 								</header>
-                <p> <strong>Organi šole</strong></p>
+                <p> <strong>Svet šole</strong></p>
                 
 				        <p>Davčna številka: 56815905</p>
 				        <p>Telefonska številka: 01-8942-160</p>
