--- a/PlanOcenjevanja.html
+++ b/PlanOcenjevanja.html
@@ -30,7 +30,7 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Plan pisnega preverjanja znanja za prvo polletje v letu 2019-2020</h2>
+									<h2>Plan pisnega preverjanja znanja v letu 2019-2020</h2>
 								</header>
                 <p>
                   
