--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -80,6 +80,15 @@
                   Govorilne ure za učence: Po dogovoru<br>
                   Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
                 </p>
+		
+		<p>
+                  <strong>Amalija Kezele</strong><br>
+                  Elektronska pošta: amalija.Kezele@gmail.com<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: Učiteljica razrednega pouka, poučuje v kombiniranem oddelku 3. in 4. razreda<br>
+			    Razredničarka 3.,4. in 5.razreda
+			    
+		</p>
 							</article>
 
 					</div>
@@ -93,7 +102,7 @@
 
 		<!-- Scripts -->
 		    <!-- Scripts -->
-
+ra
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
