--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -85,10 +85,14 @@
                   <strong>Amalija Kezele</strong><br>
                   Elektronska pošta: amalija.Kezele@gmail.com<br>
                   Govorilne ure za učence: po dogovoru<br>
-                  Predmeti: Učiteljica razrednega pouka, poučuje v kombiniranem oddelku 3. in 4. razreda<br>
-			    Razredničarka 3.,4. in 5.razreda
+                  Predmeti: Učiteljica razrednega pouka, poučuje v kombiniranem oddelku 3. in 4. razreda<br>Razredničarka 3.,4. in 5.razreda
 			    
 		</p>
+		<p>
+                  <strong>Ana Gril</strong><br>
+                  Elektronska pošta: ana.gril@gmail.com<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: Kemija, biologija, gospodinjstvo, naravoslovje, org.prehrane, razredničarka 8. in 9. razreda		
 							</article>
 
 					</div>
