--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -92,7 +92,20 @@
                   <strong>Ana Gril</strong><br>
                   Elektronska pošta: ana.gril@gmail.com<br>
                   Govorilne ure za učence: po dogovoru<br>
-                  Predmeti: Kemija, biologija, gospodinjstvo, naravoslovje, org.prehrane, razredničarka 8. in 9. razreda		
+                  Predmeti: Kemija, biologija, gospodinjstvo, naravoslovje, org.prehrane, razredničarka 8. in 9. razreda
+		</p>
+		<p>
+                  <strong>Tina Južnič</strong><br>
+                  Elektronska pošta: tina.juznic@guest.arnes.si<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: Poučuje v kombiniranem oddelku 2. in 3. razreda na podružnični šoli, dodatni in dopolnilni pouk v 2. in 3. razredu (POŠ).
+		</p>
+		<p>
+                  <strong>Marta Žagar</strong><br>
+                  Elektronska pošta: marta.zagar@gmail.com<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: oddelek 1. in 2. razreda, dodatni in dopolnilni pouk, razredničarka 1. in 2. razreda.
+		</p>
 							</article>
 
 					</div>
