--- a/Kontakt.html
+++ b/Kontakt.html
@@ -37,6 +37,8 @@
 					Martin Marinč, ravnatelj</strong><br>
 					Tel. št.: <strong>01-8942-160 (+386-1-8942-160)</strong><br>
 					E-pošta: <strong>os.fara@guest.arnes.si</strong><br> 
+					Naslov: <strong>Fara 3, 1336 Kostel</strong><br> 
+
 
          
                 </p>
