--- a/obvestilo.html
+++ b/obvestilo.html
@@ -30,7 +30,7 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Objava dokumenta ''realizacija LDN 2018-2019</h2>
+									<h2>Objava dokumenta ''realizacija LDN 2018-2019''</h2>
 								</header>
                 <p>
                   
