--- a/NPZ_2020.html
+++ b/NPZ_2020.html
@@ -34,7 +34,7 @@
 								</header>
                 <p>
     Vse podrobnosti, ki zadevajo Nacionalno preverjanje znanja za šolsko leto 2019-2020 najdete na spletni strani RIC-a.<br>
-    <a href="https://ric.si"></a><br>
+    <a href="https://ric.si"></a>?<br>
     Za dodatna pojasnila ali vprašanja, se lahko obrnete na razredničarko svojega oddelka ali na šolsko svetovalno delavko.<br>
          
                 </p>
