--- a/NPZ_2020.html
+++ b/NPZ_2020.html
@@ -35,6 +35,7 @@
                 <p>
     Vse podrobnosti, ki zadevajo Nacionalno preverjanje znanja za šolsko leto 2019-2020 najdete na spletni strani RIC-a.<br>
     Za obisk spletne strani, kliknite na <a href="https://www.ric.si/preverjanje_znanja/splosne_informacije/">POVEZAVO.</a><br>
+    Tretji predmet bo na nacionalnem preverjanju znanja na Osnovni šoli Fara - Šport.<br>
     Za dodatna pojasnila ali vprašanja, se lahko obrnete na razredničarko svojega oddelka ali na šolsko svetovalno delavko.<br>
          
                 </p>
