--- a/Osnovni_podatki.html
+++ b/Osnovni_podatki.html
@@ -38,7 +38,10 @@
                 <p>1336 Kostel</p>
 				<p>Davčna številka: 56815905</p>
 				<p>Telefonska številka: 01-8942-160</p>
-				<p>Elektronski naslov: os.fara@guest.arnes.si</p
+				<p>Elektronski naslov: os.fara@guest.arnes.si</p>
+				<p>Vrtec Fara: 01 8948 024</p>
+				<p>Kuhinja: 01 8948 025</p>
+				<p>Svetovalna služba: 05 99 31 425</p>
 				<p>Računovodski servis: Bobnar d.o.o., Karlovica 11, 1315 Velike Lašče</p>
 							</article>
 
