--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -39,8 +39,8 @@
                   Predmeti: Fizika, Glasbena umetnost, izbirni predmet Urejanje besedil, podaljšano bivanje.
                 </p>
                 <p>
-                <strong>Alan Furlani</strong><br>
-                Elektronska pošta: alan.furlani@guest.arnes.si<br>
+                <strong>Rok Lozar</strong><br>
+                Elektronska pošta: rok.lozar5@gmail.com<br>
                 Govorilne ure za učence:<br>
                 Predmeti: Športna vzgoja, izbirni predmet Šport za zdravje, podaljšano bivanje.
                 </p>
@@ -75,8 +75,8 @@
                   Predmeti: Slovenščina 5., 6., 7., 8. in 9. razred, dramsko recitatorski krožek, knjižničarka.
 		</p>
 		<p>
-                  <strong>Urška Baković</strong><br>
-                  Elektronska pošta: urska.bakovic@guest.arnes.si<br>
+                  <strong>Katja Trdan</strong><br>
+                  Elektronska pošta: katja.trdan@gmail.com<br>
                   Govorilne ure za učence: Po dogovoru<br>
                   Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
                 </p>
