--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                           </header>
                           <p>{{ n.content }}</p>
                           <p>{{ n.author }}</p>
-						  <a href="/docs/2019_09_10_ZbiranjeOdpadneEmbalaze.pdf" target="_blank">{{ n.link }}</a>
+						  <a href="/docs/NačrtCOVID19.pdf" target="_blank">{{ n.link }}</a>
 
                           <img class="news_img" v-for="i in n.images" :src="'images/' + i"  />
 
