--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -95,6 +95,12 @@
                   Predmeti: Kemija, biologija, gospodinjstvo, naravoslovje, org.prehrane, razredničarka 8. in 9. razreda
 		</p>
 		<p>
+                  <strong>Marjeta Krašovec</strong><br>
+                  Elektronska pošta: marjeta.krasovec@guest.arnes.si<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: Učiteljica matematike, tehnike in tehnologije, izbirnega predmeta tehnika.
+		</p>
+		<p>
                   <strong>Tina Južnič</strong><br>
                   Elektronska pošta: tina.juznic@guest.arnes.si<br>
                   Govorilne ure za učence: po dogovoru<br>
