--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -90,7 +90,7 @@
 		</p>
 		<p>
                   <strong>Ana Gril</strong><br>
-                  Elektronska pošta: ana.gril@gmail.com<br>
+                  Elektronska pošta: anaa.gril@gmail.com<br>
                   Govorilne ure za učence: po dogovoru<br>
                   Predmeti: Kemija, biologija, gospodinjstvo, naravoslovje, org.prehrane, razredničarka 8. in 9. razreda
 		</p>
