--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -108,7 +108,7 @@
 		</p>
 		<p>
                   <strong>Marta Žagar</strong><br>
-                  Elektronska pošta: marta.zagar@gmail.com<br>
+                  Elektronska pošta: zagar.marta@gmail.com<br>
                   Govorilne ure za učence: po dogovoru<br>
                   Predmeti: oddelek 1. in 2. razreda, dodatni in dopolnilni pouk, razredničarka 1. in 2. razreda.
 		</p>
