--- a/e_učilnica.html
+++ b/e_učilnica.html
@@ -33,7 +33,7 @@
 									<h2>Tekoče zadeve glede trenutne izredne situacije</h2>
 								</header>
                 <p>
-	  Vse učence in starše obveščamo, da se je delo na daljavo preselilo v SPLETNO UČILNICO v portalu e-asistent.<br>
+	  Vse učence in starše obveščamo, da se je delo na daljavo od 4. do 9. razreda preselilo v SPLETNO UČILNICO v portalu e-asistent.<br>
     Učenci dostopajo s svojim uporabniškim imenom in geslom, vse informacije so bile posredovane s strani razrednikov.<br>
     V spletni učilnici se bodo gradiva iz dneva v dan spreminjala, zato bodite dnevno pozorni na gradivo, ki bo objavljeno v Vaši spletni učilnici.<br>
     V spletni učilnici lahko stopite v kontakt tudi z učitelji v zavihku SPOROČILA ali v posameznem KANALU, v katerega ste kot učenci povabljeni.<br>
