--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -34,10 +34,10 @@
 								</header>
                 <p>
                   <strong>Urška Baković</strong><br>
-					Šolska svetovalna delavka Urška Baković je v OŠ in vrtcu Fara zaposlena za skrajšan delovni čas. Tako je na delovnem mestu prisotna v <strong>ponedeljek</strong>, <strong>torek</strong>, <strong>sredo</strong> in <strong>četrtek</strong> od predvidoma <strong>8. do 14. ure.</strong><br><br>
+					Šolska svetovalna delavka Katja Trdan je v OŠ in vrtcu Fara zaposlena za skrajšan delovni čas. Tako je na delovnem mestu prisotna <strong>od torka do petka od 7. do 15. ure.</strong><br><br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
-					E-pošta: <strong>urska.bakovic@guest.arnes.si</strong><br> 
+					E-pošta: <strong>katja.trdan@gmail.com</strong><br> 
 
          
                 </p>
