--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -33,7 +33,7 @@
 									<h2>Šolska svetovalna služba</h2>
 								</header>
                 <p>
-                  <strong>Urška Baković</strong><br>
+                  <strong>Katja Trdan</strong><br>
 					Šolska svetovalna delavka Katja Trdan je v OŠ in vrtcu Fara zaposlena za skrajšan delovni čas. Tako je na delovnem mestu prisotna <strong>od torka do petka od 7. do 15. ure.</strong><br><br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
