--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -64,7 +64,7 @@
 		</p>
 		<p>
                   <strong>Mateja Oberstar</strong><br>
-                  Elektronska pošta: mateja.oberstar@gmail.com<br>
+                  Elektronska pošta: mateja.oberstar@os-stari-trg-ok.si<br>
                   Govorilne ure za učence: <br>
                   Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja, podaljšano bivanje.
 		</p>
@@ -76,7 +76,7 @@
 		</p>
 		<p>
                   <strong>Katja Trdan</strong><br>
-                  Elektronska pošta: katja.trdan@gmail.com<br>
+                  Elektronska pošta: katja.trdan@guest.arnes.si<br>
                   Govorilne ure za učence: Po dogovoru<br>
                   Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
                 </p>
