--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -34,7 +34,7 @@
 								</header>
                 <p>
                   <strong>Uroš Obranovič</strong><br>
-                  Elektronska pošta: uros.obranovic@gmail.com<br>
+                  Elektronska pošta: uros.obranovic@osfara.si<br>
                   Govorilne ure za učence: Vsak torek 5. šolsko uro<br>
                   Predmeti: Fizika, Glasbena umetnost, izbirni predmet Urejanje besedil, podaljšano bivanje.
                 </p>
