--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -112,6 +112,13 @@
                   Govorilne ure za učence: po dogovoru<br>
                   Predmeti: oddelek 1. in 2. razreda, dodatni in dopolnilni pouk, razredničarka 1. in 2. razreda.
 		</p>
+								
+		<p>
+                  <strong>Andrej Žagar</strong><br>
+                  Elektronska pošta: andrej.zagar@osfara.si<br>
+                  Govorilne ure za učence: po dogovoru<br>
+                  Predmeti: Varstvo učencev, tajnik<br>
+		</p>
 							</article>
 
 					</div>
