--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -46,7 +46,7 @@
                 </p>
 		<p>
                   <strong>Mitja Letig</strong><br>
-                  Elektronska pošta: mletig@gmail.com<br>
+                  Elektronska pošta: mitja.letig@guest.arnes.si<br>
                   Govorilne ure za učence: <br>
                   Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor, izbirni predmet Glasbena dela.
 		</p>
