--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -34,10 +34,11 @@
 								</header>
                 <p>
                   <strong>Katja Trdan</strong><br>
-					Šolska svetovalna delavka Katja Trdan je v OŠ in vrtcu Fara zaposlena za skrajšan delovni čas. Tako je na delovnem mestu prisotna <strong>od torka do petka od 7. do 15. ure.</strong><br><br>
+					Šolska svetovalna delavka Katja Trdan je zaposlena v OŠ in Vrtcu Fara.<br>
+					Govorilne ure: Po dogovoru.<br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
-					E-pošta: <strong>katja.trdan@gmail.com</strong><br> 
+					E-pošta: <strong>katja.trdan@guest.arnes.si</strong><br> 
 
          
                 </p>
