--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -82,10 +82,10 @@
                 </p>
 		
 		<p>
-                  <strong>Amalija Kezele</strong><br>
-                  Elektronska pošta: amalija.Kezele@gmail.com<br>
+                  <strong>Urša Žagar</strong><br>
+                  Elektronska pošta: ursa.zagar94@gmail.com<br>
                   Govorilne ure za učence: po dogovoru<br>
-                  Predmeti: Učiteljica razrednega pouka, poučuje v kombiniranem oddelku 3. in 4. razreda<br>Razredničarka 3., 4. in 5.razreda
+                  Predmeti: Učiteljica razrednega pouka, poučuje v kombiniranem oddelku 3. in 4. razreda<br>Razredničarka 3.in 4. razreda
 			    
 		</p>
 		<p>
