--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -40,7 +40,7 @@
                 </p>
                 <p>
                 <strong>Rok Lozar</strong><br>
-                Elektronska pošta: rok.lozar5@gmail.com<br>
+                Elektronska pošta: rok.lozar@guest.arnes.si<br>
                 Govorilne ure za učence:<br>
                 Predmeti: Športna vzgoja, izbirni predmet Šport za zdravje, podaljšano bivanje.
                 </p>
@@ -83,7 +83,7 @@
 		
 		<p>
                   <strong>Urša Žagar</strong><br>
-                  Elektronska pošta: ursa.zagar94@gmail.com<br>
+                  Elektronska pošta: ursa.zagar94@gmail.com, ursa.zagar@guest.arnes.si<br>
                   Govorilne ure za učence: po dogovoru<br>
                   Predmeti: Učiteljica razrednega pouka, poučuje v kombiniranem oddelku 3. in 4. razreda<br>Razredničarka 3.in 4. razreda
 			    
