--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -36,7 +36,7 @@
                   <strong>Uroš Obranovič</strong><br>
                   Elektronska pošta: uros.obranovic@osfara.si<br>
                   Govorilne ure za učence: Vsak torek 5. šolsko uro<br>
-                  Predmeti: Fizika, Glasbena umetnost, izbirni predmet Urejanje besedil, podaljšano bivanje.
+                  Predmeti: Fizika, Glasbena umetnost, izbirni predmet MME.
                 </p>
                 <p>
                 <strong>Rok Lozar</strong><br>
