--- a/Kontakt.html
+++ b/Kontakt.html
@@ -38,7 +38,9 @@
 					Tel. št.: <strong>01-8942-160 (+386-1-8942-160)</strong><br>
 					Tel. št.: <strong>00386 41 755 302 (+386 41 755 302)</strong><br>
 					E-pošta: <strong>os.fara@guest.arnes.si</strong><br> 
-					Naslov: <strong>Fara 3, 1336 Kostel</strong><br> 
+					Naslov: <strong>Fara 3, 1336 Kostel</strong><br><br>
+				        Knjižnica, vodja Geraldine Frbežar</strong><br>
+					Tel. št.: <strong>01-8942-160 (+386-1-8942-160)</strong><br>
 
 
          
