--- a/Kontakt.html
+++ b/Kontakt.html
@@ -40,7 +40,7 @@
 					E-pošta: <strong>os.fara@guest.arnes.si</strong><br> 
 					Naslov: <strong>Fara 3, 1336 Kostel</strong><br><br>
 				        Knjižnica, vodja Geraldine Frbežar</strong><br>
-					Tel. št.: <strong>01-8942-160 (+386-1-8942-160)</strong><br>
+					Tel. št.: <strong>05-993-11-33 (+386-5-993-11-33)</strong><br>
 
 
          
