--- a/Kontakt.html
+++ b/Kontakt.html
@@ -41,6 +41,12 @@
 					Naslov: <strong>Fara 3, 1336 Kostel</strong><br><br>
 				        Knjižnica, vodja Geraldine Frbežar</strong><br>
 					Tel. št.: <strong>05-993-11-33 (+386-5-993-11-33)</strong><br>
+					Kuhinja OŠ Fara</strong><br>
+					Tel. št.: <strong>01-8948-025 (+386-1-8948-025)</strong><br>
+			                Vrtec pri OŠ Fara</strong><br>
+					Tel. št.: <strong>01-8948-024 (+386-1-8948-024)</strong><br>
+
+
 
 
          
