--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                           <footer>
 				  <!-- ce je povezava za novico page, aktiviraj spodnjo vrstico, in v JSON formatu napisi page-->
-				  <a v-for="i in n.link_page" :href="i">Več o tem ---></a> 
+				  <a v-for="i in n.link_page" :href="i">Več o tem...</a> 
 				  <!-- JSON:
 					,
 					"link_page": ["Govorilne_ure.html"]
