--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 
                           <footer>
 				  <!-- ce je povezava za novico page, aktiviraj spodnjo vrstico, in v JSON formatu napisi page-->
-				  <a v-for="i in n.link_page" :href="i">Več o tem...</a> 
+				  <!-- <a v-for="i in n.link_page" :href="i">Več o tem...</a>  -->
 				  <!-- JSON:
 					,
 					"link_page": ["Govorilne_ure.html"]
 					-->
 				  
 				  <!-- ce je povezava za novico file, aktiviraj spodnjo vrstico, in v JSON formatu napisi za kateri file gre (file shrai v /'docs'-->
-				  <!-- <a v-for="i in n.link_file" :href="'docs/' + i" target = "_blank">Več o tem ... </a> -->
+				  <a v-for="i in n.link_file" :href="'docs/' + i" target = "_blank">Več o tem ... </a>
 				  <!-- JSON:
 					,
 					"link_file": ["BIO_8.pdf"] 
