--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -39,10 +39,10 @@
                   Predmeti: Fizika, Glasbena umetnost, izbirni predmet MME.
                 </p>
                 <p>
-                <strong>Rok Lozar</strong><br>
-                Elektronska pošta: rok.lozar@guest.arnes.si<br>
+                <strong>Tadej Špoljar</strong><br>
+                Elektronska pošta: tadej.spoljar@gmail.com<br>
                 Govorilne ure za učence:<br>
-                Predmeti: Športna vzgoja, izbirni predmet Šport za zdravje, podaljšano bivanje.
+                Predmeti: Športna vzgoja, izbirni predmet Šport za spostitev, podaljšano bivanje.
                 </p>
 		<p>
                   <strong>Mitja Letig</strong><br>
