--- a/Govorilne_ure.html
+++ b/Govorilne_ure.html
@@ -34,7 +34,7 @@
 								</header>
                 <p>
                   
-					Govorilne ure na Osnovni šoli Fara potekajo vsak 1. torek v mesecu med 16. in 17. uro. Za dodatne informacije se lahko obrnete na razrednika svojega oddelka. Prve govorilne ure v mesecu januarju bodo torej 8. januarja ob 16.uri. <br><br>
+					Govorilne ure na Osnovni šoli Fara načeloma potekajo vsak 1. torek v mesecu med 16. in 17. uro. Za dodatne informacije se lahko obrnete na razrednika svojega oddelka.<br><br>
 					Za podrobnejše informacije o roditeljskih sestankih ter govorilnih urah učiteljev za učence in starše sledite <a href="/docs/Govorilne_2019_2020.pdf">povezavi...</a>
 				
 				</p>
