--- a/Osnovni_podatki.html
+++ b/Osnovni_podatki.html
@@ -42,7 +42,7 @@
 				<p>Vrtec Fara: 01 8948 024</p>
 				<p>Kuhinja: 01 8948 025</p>
 				<p>Svetovalna služba: 05 99 31 425</p>
-				<p>Računovodski servis: Bobnar d.o.o., Karlovica 11, 1315 Velike Lašče</p>
+				<p>Računovodski servis: Bobnar d.o.o., Karlovica 11, 1315 Velike Lašče. E-naslov: bobnar.marija@siol.net</p>
 							</article>
 
 					</div>
