--- a/Govorilne_ure.html
+++ b/Govorilne_ure.html
@@ -30,11 +30,11 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Govorilne ure na Osnovni šoli Fara</h2>
+									<h2>Govorilne ure na Osnovni šoli Fara v šolskem letu 2022/2023</h2>
 								</header>
                 <p>
                   
-					Govorilne ure na Osnovni šoli Fara načeloma potekajo vsak 1. torek v mesecu med 16. in 17. uro. Za dodatne informacije se lahko obrnete na razrednika svojega oddelka.<br><br>
+					Govorilne ure na Osnovni šoli Fara bodo v letošnjem šolskem letu potekale po malce drugačni razporeditvi. Govorilne ure bodo potekale v mesecih SEPTEMBER, NOVEMBER, JANUAR, MAREC, MAJ in JUNIJ in sicer 1. torek v mesecu med 16. in 17. uro. Za dodatne informacije se lahko obrnete na razrednika svojega oddelka.<br><br>
 					Za podrobnejše informacije o roditeljskih sestankih ter govorilnih urah učiteljev za učence in starše sledite <a href="/docs/GU.pdf">povezavi...</a>
 				
 				</p>
