--- a/Osilnica_info.html
+++ b/Osilnica_info.html
@@ -30,7 +30,7 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Nacionalno preverjanje znanja - Maj 2020</h2>
+									<h2>Podružnična šola v Osilnici</h2>
 								</header>
                 <p>
     V letošnjem šolskem letu 2022/2023 na podružnični šoli Osilnica ni na novo vpisanih učencev. Trenutno pouk poteka samo na matični šoli - Osnovni šoli Fara.<br>
