--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -34,11 +34,11 @@
 								</header>
                 <p>
                   <strong>Katja Trdan</strong><br>
-					Šolska svetovalna delavka Katja Trdan je zaposlena v OŠ in Vrtcu Fara.<br>
+					Šolska svetovalna delavka Anđela Krsnik je zaposlena v OŠ in Vrtcu Fara.<br>
 					Govorilne ure: Po dogovoru.<br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
-					E-pošta: <strong>katja.trdan@guest.arnes.si</strong><br> 
+					E-pošta: <strong>andela.krsnik@outlook.com</strong><br> 
 
          
                 </p>
