--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -33,7 +33,7 @@
 									<h2>Šolska svetovalna služba</h2>
 								</header>
                 <p>
-                  <strong>Katja Trdan</strong><br>
+                  <strong>Anđela Krsnik</strong><br>
 					Šolska svetovalna delavka Anđela Krsnik je zaposlena v OŠ in Vrtcu Fara.<br>
 					Govorilne ure: Po dogovoru.<br>
 					Kontakt:<br>
