--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -76,7 +76,7 @@
 		</p>
 		<p>
                   <strong>Anđela Krsnik</strong><br>
-                  Elektronska pošta: andela.krsnik@guest.arnes.si<br>
+                  Elektronska pošta: andela.krsnik@outlook.com<br>
                   Govorilne ure za učence: Po dogovoru<br>
                   Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
                 </p>
