--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -38,7 +38,7 @@
 					Govorilne ure: Po dogovoru.<br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
-					E-pošta: <strong>andela.krsnik@outlook.com</strong><br> 
+					E-pošta: <strong>andela.krsnik@osfara.si</strong><br> 
 
          
                 </p>
