--- a/zaucenceinstarse.html
+++ b/zaucenceinstarse.html
@@ -30,7 +30,7 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Vse pomembnejše informacije za učence in starše so na voljo v tem meniju.</h2>
+									<h2>Vse pomembnejše informacije za učence in starše so na voljo tukaj.</h2>
 								</header>
                 <p>
 	  Če se z miško približate meniju ''Za učence in starše'', se Vam prikaže spustni meni, kjer izberete zavihek po izbiri. <br>
