Govorilne_ure.html

--- a/Govorilne_ure.html
+++ b/Govorilne_ure.html
@@ -30,7 +30,7 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Govorilne ure na Osnovni šoli Fara v šolskem letu 2023/2024</h2>
+									<h2>Govorilne ure - šolsko leto 2023/2024</h2>
 								</header>
                 <p>
                   
