--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -30,82 +30,89 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Zaposleni</h2>
+									<h2>Zaposleni - šolsko leto 2023/2024</h2>
 								</header>
                 <p>
                   <strong>Uroš Obranovič</strong><br>
                   Elektronska pošta: uros.obranovic@osfara.si<br>
-                  Govorilne ure za učence: Vsak torek 5. šolsko uro<br>
-                  Predmeti: Fizika, Matematika 6.-9.razreda, računalništvo, varstvo učencev.
+                  Dopoldanska govorilna ura: torek, 5. ura<br>
+                  Predmeti: Fizika, Matematika 6.-9.razreda, NIP računalništvo (4. do 6. r), varstvo učencev.
                 </p>
                 <p>
                 <strong>Tadej Špoljar</strong><br>
                 Elektronska pošta: tadej.spoljar@gmail.com<br>
-                Govorilne ure za učence:<br>
-                Predmeti: Športna vzgoja, izbirni predmet Šport za spostitev, podaljšano bivanje.
+                Dopoldanska govorilna ura: torek, 3. ura<br>
+                Predmeti: Športna vzgoja, Obvezni izbirni predmet Šport, podaljšano bivanje.
                 </p>
 		<p>
                   <strong>Mitja Letig</strong><br>
                   Elektronska pošta: mitja.letig@guest.arnes.si<br>
-                  Govorilne ure za učence: <br>
-                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor, izbirni predmet Glasbena dela.
+                  Dopoldanska govorilna ura: četrtek, 3. ura<br>
+                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor, Obvezni izbirni predmet Glasbeni projekt.
 		</p>
 		<p>
                   <strong>Alenka Čop</strong><br>
                   Elektronska pošta: alenka.cop@guest.arnes.si<br>
-                  Govorilne ure za učence: <br>
-                  Predmeti: Angleški jezik, individualna in skupinska pomoč, izbirni predmet Nemščina, dodatni in dopolnilni pouk.
+                  Dopoldanska govorilna ura: ponedeljek, 6. ura<br>
+                  Predmeti: Gospodinjstvo, individualna in skupinska pomoč, izbirni predmet Nemščina, dodatni in dopolnilni pouk, organizacija prehrane.
 		</p>
 		<p>
-                  <strong>Ajda Skrbinšek</strong><br>
+                  <strong>Urša Barič</strong><br>
                   Elektronska pošta: <br>ajda.skrbinsek@guest.arnes.si
-                  Govorilne ure za učence: <br>
-                  Predmeti: Likovna umetnost,podaljšano bivanje.
+                  Govorilne ure za učence: petek, 4. ura<br>
+                  Predmeti: Likovna umetnost,podaljšano bivanje, varstvo učencev.
 		</p>
 		<p>
                   <strong>Mateja Oberstar</strong><br>
                   Elektronska pošta: mateja.oberstar@os-stari-trg-ok.si<br>
-                  Govorilne ure za učence: <br>
+                  Dopoldanska govorilna ura: petek, 4. ura<br>
                   Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja, podaljšano bivanje.
 		</p>
 		<p>
                   <strong>Geraldine Frbežar</strong><br>
                   Elektronska pošta: geraldine.frbezar@guest.arnes.si<br>
-                  Govorilne ure za učence: po dogovoru<br>
+                  Dopoldanska govorilna ura: sreda, 5. ura<br>
                   Predmeti: Slovenščina 5., 6., 7., 8. in 9. razred, dramsko recitatorski krožek, knjižničarka.
 		</p>
 		<p>
                   <strong>Anđela Krsnik</strong><br>
                   Elektronska pošta: andela.krsnik@osfara.si<br>
-                  Govorilne ure za učence: Po dogovoru<br>
-                  Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem.
+                  Dopoldanska govorilna ura: četrtek, 4. ura<br>
+                  Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem, vodja vrtca.
                 </p>
 		
 		<p>
                   <strong>Tina Južnič</strong><br>
                   Elektronska pošta: tina.juznic@guest.arnes.si<br>
-                  Govorilne ure za učence: po dogovoru<br>
+                  Dopoldanska govorilna ura: sreda, 4. ura<br>
                   Predmeti: Učiteljica razrednega pouka, matematika 5. razred, razredničarka 3.in 4. razreda.
 			    
 		</p>
 		<p>
-                  <strong>Mojca Rački</strong><br>
-                  Elektronska pošta: mojca.racki@gmail.com<br>
+                  <strong>Damir Marković</strong><br>
+                  Elektronska pošta: damir.markovic@csod.si<br>
                   Govorilne ure za učence: po dogovoru<br>
-                  Predmeti: Kemija, biologija, gospodinjstvo, naravoslovje, org.prehrane.
+                  Predmeti: Kemija (8. in 9. razred), biologija (8. in 9. razred)
 		</p>
 		
 		<p>
-                  <strong>Marta Žagar</strong><br>
-                  Elektronska pošta: zagar.marta@gmail.com<br>
-                  Govorilne ure za učence: po dogovoru<br>
-                  Predmeti: oddelek 1. in 2. razreda, dodatni in dopolnilni pouk, razredničarka 1. in 2. razreda, glasbena umetnost.
+                  <strong>Urša Žagar</strong><br>
+                  Elektronska pošta: ursa.zagar@osfara.si<br>
+                  Dopoldanska govorilna ura: četrtek, 5. ura<br>
+                  Predmeti: oddelek 1. in 2. razreda, dodatni in dopolnilni pouk, razredničarka 1. in 2. razreda. 
+		</p>
+
+		<p>
+                  <strong>Miha Krkovič</strong><br>
+                  Elektronska pošta: miha.krkovic@yahoo.com<br>
+                  Dopoldanska govorilna ura: četrtek, 6. ura<br>
+                  Predmeti: Naravoslovje (6. in 7.r) 
 		</p>
 								
 		<p>
                   <strong>Andrej Žagar</strong><br>
                   Elektronska pošta: andrej.zagar@osfara.si<br>
-                  Govorilne ure za učence: po dogovoru<br>
+                  Dopoldanska govorilna ura: ponedeljek, 3. ura<br>
                   Predmeti: Varstvo učencev, tajnik<br>
 		</p>
 							</article>
