--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -91,7 +91,7 @@
 		<p>
                   <strong>Damir Marković</strong><br>
                   Elektronska pošta: damir.markovic@csod.si<br>
-                  Govorilne ure za učence: po dogovoru<br>
+                   Dopoldanska govorilna ura: po dogovoru<br>
                   Predmeti: Kemija (8. in 9. razred), biologija (8. in 9. razred)
 		</p>
 		
